@@ -1,0 +1,93 @@
+ldx :: offset: 0x8, out: 0x9823b6e0d4326d9
+ldx :: offset: 0x10, out: 0x130476dc17c56b6b
+ldx :: offset: 0x18, out: 0x1a864db21e475005
+ldx :: offset: 0x20, out: 0x2608edb822c9f00f
+ldx :: offset: 0x28, out: 0x2f8ad6d62b4bcb61
+ldx :: offset: 0x30, out: 0x350c9b6431cd86d3
+ldx :: offset: 0x38, out: 0x3c8ea00a384fbdbd
+ldx :: offset: 0x40, out: 0x4c11db7048d0c6c7
+ldx :: offset: 0x48, out: 0x4593e01e4152fda9
+ldx :: offset: 0x50, out: 0x5f15adac5bd4b01b
+ldx :: offset: 0x58, out: 0x569796c252568b75
+ldx :: offset: 0x60, out: 0x6a1936c86ed82b7f
+ldx :: offset: 0x68, out: 0x639b0da6675a1011
+ldx :: offset: 0x70, out: 0x791d40147ddc5da3
+ldx :: offset: 0x78, out: 0x709f7b7a745e66cd
+ldx :: offset: 0x80, out: 0x9823b6e09ce2ab57
+ldx :: offset: 0x88, out: 0x91a18d8e95609039
+ldx :: offset: 0x90, out: 0x8b27c03c8fe6dd8b
+ldx :: offset: 0x98, out: 0x82a5fb528664e6e5
+ldx :: offset: 0xa0, out: 0xbe2b5b58baea46ef
+ldx :: offset: 0xa8, out: 0xb7a96036b3687d81
+ldx :: offset: 0xb0, out: 0xad2f2d84a9ee3033
+ldx :: offset: 0xb8, out: 0xa4ad16eaa06c0b5d
+ldx :: offset: 0xc0, out: 0xd4326d90d0f37027
+ldx :: offset: 0xc8, out: 0xddb056fed9714b49
+ldx :: offset: 0xd0, out: 0xc7361b4cc3f706fb
+ldx :: offset: 0xd8, out: 0xceb42022ca753d95
+ldx :: offset: 0xe0, out: 0xf23a8028f6fb9d9f
+ldx :: offset: 0xe8, out: 0xfbb8bb46ff79a6f1
+ldx :: offset: 0xf0, out: 0xe13ef6f4e5ffeb43
+ldx :: offset: 0xf8, out: 0xe8bccd9aec7dd02d
+lbux :: offset: 0x8, out: 0x9
+lbux :: offset: 0x10, out: 0x13
+lbux :: offset: 0x18, out: 0x1a
+lbux :: offset: 0x20, out: 0x26
+lbux :: offset: 0x28, out: 0x2f
+lbux :: offset: 0x30, out: 0x35
+lbux :: offset: 0x38, out: 0x3c
+lbux :: offset: 0x40, out: 0x4c
+lbux :: offset: 0x48, out: 0x45
+lbux :: offset: 0x50, out: 0x5f
+lbux :: offset: 0x58, out: 0x56
+lbux :: offset: 0x60, out: 0x6a
+lbux :: offset: 0x68, out: 0x63
+lbux :: offset: 0x70, out: 0x79
+lbux :: offset: 0x78, out: 0x70
+lbux :: offset: 0x80, out: 0x98
+lbux :: offset: 0x88, out: 0x91
+lbux :: offset: 0x90, out: 0x8b
+lbux :: offset: 0x98, out: 0x82
+lbux :: offset: 0xa0, out: 0xbe
+lbux :: offset: 0xa8, out: 0xb7
+lbux :: offset: 0xb0, out: 0xad
+lbux :: offset: 0xb8, out: 0xa4
+lbux :: offset: 0xc0, out: 0xd4
+lbux :: offset: 0xc8, out: 0xdd
+lbux :: offset: 0xd0, out: 0xc7
+lbux :: offset: 0xd8, out: 0xce
+lbux :: offset: 0xe0, out: 0xf2
+lbux :: offset: 0xe8, out: 0xfb
+lbux :: offset: 0xf0, out: 0xe1
+lbux :: offset: 0xf8, out: 0xe8
+lwx :: offset: 0x8, out: 0x9823b6e
+lwx :: offset: 0x10, out: 0x130476dc
+lwx :: offset: 0x18, out: 0x1a864db2
+lwx :: offset: 0x20, out: 0x2608edb8
+lwx :: offset: 0x28, out: 0x2f8ad6d6
+lwx :: offset: 0x30, out: 0x350c9b64
+lwx :: offset: 0x38, out: 0x3c8ea00a
+lwx :: offset: 0x40, out: 0x4c11db70
+lwx :: offset: 0x48, out: 0x4593e01e
+lwx :: offset: 0x50, out: 0x5f15adac
+lwx :: offset: 0x58, out: 0x569796c2
+lwx :: offset: 0x60, out: 0x6a1936c8
+lwx :: offset: 0x68, out: 0x639b0da6
+lwx :: offset: 0x70, out: 0x791d4014
+lwx :: offset: 0x78, out: 0x709f7b7a
+lwx :: offset: 0x80, out: 0xffffffff9823b6e0
+lwx :: offset: 0x88, out: 0xffffffff91a18d8e
+lwx :: offset: 0x90, out: 0xffffffff8b27c03c
+lwx :: offset: 0x98, out: 0xffffffff82a5fb52
+lwx :: offset: 0xa0, out: 0xffffffffbe2b5b58
+lwx :: offset: 0xa8, out: 0xffffffffb7a96036
+lwx :: offset: 0xb0, out: 0xffffffffad2f2d84
+lwx :: offset: 0xb8, out: 0xffffffffa4ad16ea
+lwx :: offset: 0xc0, out: 0xffffffffd4326d90
+lwx :: offset: 0xc8, out: 0xffffffffddb056fe
+lwx :: offset: 0xd0, out: 0xffffffffc7361b4c
+lwx :: offset: 0xd8, out: 0xffffffffceb42022
+lwx :: offset: 0xe0, out: 0xfffffffff23a8028
+lwx :: offset: 0xe8, out: 0xfffffffffbb8bb46
+lwx :: offset: 0xf0, out: 0xffffffffe13ef6f4
+lwx :: offset: 0xf8, out: 0xffffffffe8bccd9a
